--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -128,7 +128,7 @@
   "save_on_orders_above": "save on orders above ",
   "checkout": "checkout",
   "search_products": "search products",
-  "search": "search",
+  "search": "search...",
   "popular_search": "popular search",
   "no_product_were_found": "no product were found",
   "check_the_speling_or_try_searching_again": "check the speling or try searching again.",
