--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -280,5 +280,13 @@
   "your_upcoming_order":"your upcoming order",
   "to":"to",
   "info": "info",
-  "from":"from"
+  "from":"from",
+  "validation": {
+    "required": "this field is required",
+    "email": "ُemail is not in a correct form.",
+    "min": "must be at least {{min}}",
+    "max": "must be at less than  {{max}}",
+    "matches": "enter a valid format"
+  },
+  "Phone_number_must_be_between_8_and_15_number":"Phone number must be between 8 and 15 digits"
 }
