--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -93,13 +93,14 @@
   "tracking_orders": "تتبع الطلبات",
   "account_info": "معلومات الحساب",
   "verify_your_mobile_number": "التحقق من رقم الهاتف",
-  "you_ll_receive_a_one_time_password_shortly.": "ستتلقى قريبًا كلمة مرور لمرة واحدة",
+  "you_ll_receive_a_one_time_password_shortly.": "ستتلقى قريبًا رقم التعريف",
   "send_otp": "إرسال كلمة مرور لمرة واحدة",
   "or_continue_as": "أو استمر كـ",
   "guest": "زائر",
-  "otp_verification": "التحقق من كلمة المرور لمرة واحدة",
+  "otp_verification": "التحقق من رقم التعريف",
   "confirmation_your_number": "تأكيد رقم هاتفك",
-  "please_enter_the_4-digit_code_that_was_sent_to_the_number": "برجاء إدخال الكود المكون من 4 أرقام الذي تم إرساله إلى هاتفك",
+  "please_enter_the_4-digit_code_that_was_sent": "برجاء إدخال الكود الذي تم إرساله",
+  "to_the_number": "إلى هاتف",
   "you_ll_receive_code_in": "سوف تستقبل كود خلال",
   "verify": "تحقق",
   "complete_your_account_info": "أكمِل بيانات حسابك",
@@ -250,5 +251,10 @@
   "info": "معلومات",
   "search": "بحث...",
   "search_products": "بحث عن المنتجات",
-  "from":"من"
+  "from":"من",
+  "phone_number_must_be_between_9_and_15_number": "يجب أن يتراوح رقم الهاتف بين 9 و15 رقم",
+  "send": "إرسال",
+  "otp": "رقم التعريف",
+  "verification": "التحقق من",
+  "name_is_required": "الاسم مطلوب"
 }
