--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -260,6 +260,7 @@
     "max" : "الحقل يجب أن يكون أقل من   {{max}}",
     "matches":"ادخل رقم هاتف صحيح"
   },
-  "Phone_number_must_be_between_8_and_15_number":"رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما"
+  "Phone_number_must_be_between_8_and_15_number":"رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
+  "saved_in_wish_list":"تم الحفظ بنجاح في قائمتك المفضلة"
 
 }
