--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -268,6 +268,7 @@
   },
   "Phone_number_must_be_between_8_and_15_number":"رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
   "saved_in_wish_list":"تم الحفظ بنجاح في قائمتك المفضلة",
+  "deleted_from_wishlist":"تم المسح بنجاح من قائمتك المفضلة",
   "no_address": "لم يتم حفظ عنوان حتى الآن",
   "no_address_des": "تساعدك العناوين المحفوظة على الطلب بسرعة إلى عنوانك",
   "add_address": "أضف عنوان"
