--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -233,10 +233,10 @@
   "enter_your_name": "أدخِل اسمك ",
   "guest_info": "بيانات الزائر",
   "email_optional": "الإيميل (اختياري)",
-  "promo_is_saved_and_will_be_applied_to_your_cart":"تم حفظ كود الخصم و سيتم تطبيقه علي عبه التسوق الخاصة بك",
-  "to_your_cart_to_free_delivery":"الي عربه التسوق لتسليم مجانا",
-  "add":"اضف",
-  "free_delivery_on_orders_above":"تسليم مجانا علي الطلبات الاعلي من",
+  "promo_is_saved_and_will_be_applied_to_your_cart": "تم حفظ كود الخصم و سيتم تطبيقه علي عبه التسوق الخاصة بك",
+  "to_your_cart_to_free_delivery": "الي عربه التسوق لتسليم مجانا",
+  "add": "اضف",
+  "free_delivery_on_orders_above": "تسليم مجانا علي الطلبات الاعلي من",
   "min": "دقيقة",
   "delivery_fees": "مصاريف التوصيل",
   "language_changed_successfully": "تم تغيير اللغة",
@@ -245,13 +245,13 @@
   "special_remarks": "علامات خاصة",
   "credit_card": "بطاقة ائتمان",
   "pay_by_knet": "الدفع بـ كي نت",
-  "coupon_value" : "قيمة الخصم",
-  "your_upcoming_order":"الطلبات الحاليه",
-  "to":"إلى",
+  "coupon_value": "قيمة الخصم",
+  "your_upcoming_order": "الطلبات الحاليه",
+  "to": "إلى",
   "info": "معلومات",
   "search": "بحث...",
   "search_products": "بحث عن المنتجات",
-  "from":"من",
+  "from": "من",
   "phone_number_must_be_between_9_and_15_number": "يجب أن يتراوح رقم الهاتف بين 9 و15 رقم",
   "send": "إرسال",
   "otp": "رقم التعريف",
@@ -259,17 +259,19 @@
   "name_is_required": "الاسم مطلوب",
   "have_a_tracking_code?_enter_order_id_below_to_track_it": "هل لديك رقم للتتبع؟ ادخل رقم الطلب لتتبعه",
   "have_a_order_id?_enter_it_to_track_it": "لديك رقم الطلب؟ ادخله لتتبعه",
-  "validation" : {
-    "required" : "الحقل مطلوب",
-    "email" : "البريد الإلكتروني غير صحيح",
-    "min" : "الحقل يجب أن يكون اكبر من {{min}}",
-    "max" : "الحقل يجب أن يكون أقل من   {{max}}",
-    "matches":"ادخل رقم هاتف صحيح"
+  "validation": {
+    "required": "الحقل مطلوب",
+    "email": "البريد الإلكتروني غير صحيح",
+    "min": "الحقل يجب أن يكون اكبر من {{min}}",
+    "max": "الحقل يجب أن يكون أقل من   {{max}}",
+    "matches": "ادخل رقم هاتف صحيح"
   },
-  "Phone_number_must_be_between_8_and_15_number":"رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
-  "saved_in_wish_list":"تم الحفظ بنجاح في قائمتك المفضلة",
-  "deleted_from_wishlist":"تم المسح بنجاح من قائمتك المفضلة",
+  "Phone_number_must_be_between_8_and_15_number": "رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
+  "saved_in_wish_list": "تم الحفظ بنجاح في قائمتك المفضلة",
+  "deleted_from_wishlist": "تم المسح بنجاح من قائمتك المفضلة",
   "no_address": "لم يتم حفظ عنوان حتى الآن",
   "no_address_des": "تساعدك العناوين المحفوظة على الطلب بسرعة إلى عنوانك",
-  "add_address": "أضف عنوان"
+  "add_address": "أضف عنوان",
+  "ur_order": "طلبك",
+  "order_received_we_have_got_ur_order": "تم استلام الطلب وجاري العمل على تنفيذه"
 }
