--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -306,5 +306,6 @@
   "sub_total": "sub total",
   "get_direction": "get direction",
   "payment_details": "payment details",
-  "help_btn": "help?"
+  "help_btn": "help?",
+  "the_link_has_been_copied_successfully": "the link has been copied successfully"
 }
