--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -313,5 +313,8 @@
   "area": "area",
   "address": "address",
   "order_not_found": "order not found.",
-  "no_orders_found": "no orders found."
+  "no_orders_found": "no orders found.",
+  "preparing_order_we_r_making_ur_food": "preparing order we are making your food",
+  "order_is_ready_for_pickup_we_r_waiting": "order is ready for pickup. we are waiting",
+  "order_is_ready_for_delivery": "order is ready for delivery"
 }
