--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -287,8 +287,9 @@
   "sorry_we_do_not_delivery_here": "نأسف لا يوجد توصيل في الموقع المختار.",
   "delivery_address": "عنوان التوصيل",
   "order_not_found": "الطلب غير موجود",
-  "no_orders_found" : "لم يتم العثور على أية طلبات",
-  "preparing_order_we_r_making_ur_food" : "جاري تجهيز الطلب",
-  "order_is_ready_for_pickup_we_r_waiting" : "الطلب جاهز للتسليم، في انتظارك",
-  "order_is_ready_for_delivery" : "جاري توصيل طلبك الآن"
+  "no_orders_found": "لم يتم العثور على أية طلبات",
+  "preparing_order_we_r_making_ur_food": "جاري تجهيز الطلب",
+  "order_is_ready_for_pickup_we_r_waiting": "الطلب جاهز للتسليم، في انتظارك",
+  "order_is_ready_for_delivery": "جاري توصيل طلبك الآن",
+  "order_is_shipped": "تم توصيل الطلب"
 }
