--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -305,7 +305,6 @@
   "delivery_location": "delivery location",
   "sub_total": "sub total",
   "get_direction": "get direction",
-  "payment_details": "payment details",
   "help_btn": "help?",
   "the_link_has_been_copied_successfully": "the link has been copied successfully",
   "sorry_we_do_not_delivery_here": "sorry we do  not deliver here.",
@@ -313,5 +312,7 @@
   "area": "area",
   "address": "address",
   "order_not_found": "order not found.",
-  "no_orders_found": "no orders found."
+  "no_orders_found": "no orders found.",
+  "You_’re_about_to_change_your_location": "You’re about to change your location",
+  "changing_your_location_might_result_in_removing_the_items_from_your_cart": "changing your location might result in removing the items from your cart"
 }
