--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -320,5 +320,7 @@
   "popular_search": "المنتجات الشائعة",
   "add_items": "إضافة منتجات",
   "office_no_is_required": "رقم المكتب مطلوب",
-  "customer_id_is_required": "لم يتم ادخال بيانات يرجى الدخول لصفحة التسجيل وادخال بياناتك كضيف لاستكمال باقي المعلومات"
+  "customer_id_is_required": "لم يتم ادخال بيانات يرجى الدخول لصفحة التسجيل وادخال بياناتك كضيف لاستكمال باقي المعلومات",
+  "the_payment_process_has_failed": "تم فشل عملية الدفع",
+  "failure_msg": "نأسف لذلك ، لقد فشلت عملية الدفع الخاصة بك للطلب بسبب بعض المشاكل. لا تقلق ، يحدث هذا عادة ، يمكنك الاتصال بالدعم الفني أو المطعم للحصول على المساعدة."
 }
