--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -163,7 +163,7 @@
   "success_msg": "When we finish preparing your order, you will receive a voice call from us . We may contact you to confirm delivery information",
   "estimated_time": "estimated time",
   "the_payment_process_has_failed": "the payment process has failed.",
-  "failure_msg": "We are sorry for that , your payment for the order has failed due to some issue. Don't worry, this usually happens, you can contact technical support or the restaurant for help.",
+  "failure_msg": "we are sorry for that , your payment for the order has failed due to some issue. don't worry, this usually happens, you can contact technical support or the restaurant for help.",
   "date_time": "date & time",
   "order_type": "order type",
   "payment_card": "payment card",
