map lat,long - address -trans

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -148,7 +148,7 @@
   "quantity_of_out_of_stock": "هذا المنتج غير متاح",
   "promo_code_is_invalid": "رقم الكوبون غير صحيح",
   "promo_code_validation": "تم تفعيل كود الخصم",
-  "remove": "ازاله",
+  "remove": "حذف",
   "your_order_is_successfully_done": ".تم الطلب بنجاح",
   "estimated_time": "الوقت المتوقع",
   "success_msg": "عندما ننتهي من تجهيز طلبك ، ستتلقى مكالمة صوتية منا. قد نتصل بك لتأكيد معلومات التسليم",
@@ -322,5 +322,6 @@
   "office_no_is_required": "رقم المكتب مطلوب",
   "customer_id_is_required": "لم يتم ادخال بيانات يرجى الدخول لصفحة التسجيل وادخال بياناتك كضيف لاستكمال باقي المعلومات",
   "the_payment_process_has_failed": "تم فشل عملية الدفع",
-  "failure_msg": "نأسف لذلك ، لقد فشلت عملية الدفع الخاصة بك للطلب بسبب بعض المشاكل. لا تقلق ، يحدث هذا عادة ، يمكنك الاتصال بالدعم الفني أو المطعم للحصول على المساعدة."
+  "failure_msg": "نأسف لذلك ، لقد فشلت عملية الدفع الخاصة بك للطلب بسبب بعض المشاكل. لا تقلق ، يحدث هذا عادة ، يمكنك الاتصال بالدعم الفني أو المطعم للحصول على المساعدة.",
+  "address_deleted_successfully": "تم حذف العنوان بنجاح"
 }
