--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -345,5 +345,6 @@
   "floor_no_is_required": "floor no is required",
   "apartment_no_is_required": "apartment no is required",
   "save_receipt": "save receipt",
-  "customer_id_is_required": "please enter login page and sign in as a guest in order to continue your information."
+  "customer_id_is_required": "please enter login page and sign in as a guest in order to continue your information.",
+  "address_deleted_successfully": "address deleted successfully"
 }
