--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -139,7 +139,7 @@
   "select": "اختر",
   "price_on_selection": "السعر عند الاختيار",
   "add_to_cart": "أضف إلى عربة التسوق",
-  "item_added_successfully": "تم الإضافة",
+  "item_added_successfully": "تم إضافة عنصر للعربة",
   "this_branch": "هذا الفرع",
   "this_area": "هذه المنطقة",
   "select_address": "اختر عنوان",
@@ -323,5 +323,6 @@
   "customer_id_is_required": "لم يتم ادخال بيانات يرجى الدخول لصفحة التسجيل وادخال بياناتك كضيف لاستكمال باقي المعلومات",
   "the_payment_process_has_failed": "تم فشل عملية الدفع",
   "failure_msg": "نأسف لذلك ، لقد فشلت عملية الدفع الخاصة بك للطلب بسبب بعض المشاكل. لا تقلق ، يحدث هذا عادة ، يمكنك الاتصال بالدعم الفني أو المطعم للحصول على المساعدة.",
-  "address_deleted_successfully": "تم حذف العنوان بنجاح"
+  "address_deleted_successfully": "تم حذف العنوان بنجاح",
+  "please_provide_all_required_information": "يرجى تقديم جميع المعلومات المطلوبة"
 }
