--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -309,7 +309,7 @@
   "confirm_password": "تأكيد كلمة المرور",
   "confirm_password_is_required": "تأكيد كلمة المرور مطلوب",
   "save": "حفظ",
-  "the_password_you_entered_is_incorrect.": "كلمة المرور التي قمت بإدخالها غير صحيحة",
+  "the_password_you_entered_is_incorrect": "كلمة المرور التي قمت بإدخالها غير صحيحة",
   "building_no_is_required": "رقم المبنى مطلوب",
   "city_is_required": "المدينة مطلوبة",
   "street_is_required": "الشارع مطلوب",
@@ -324,5 +324,6 @@
   "the_payment_process_has_failed": "تم فشل عملية الدفع",
   "failure_msg": "نأسف لذلك ، لقد فشلت عملية الدفع الخاصة بك للطلب بسبب بعض المشاكل. لا تقلق ، يحدث هذا عادة ، يمكنك الاتصال بالدعم الفني أو المطعم للحصول على المساعدة.",
   "address_deleted_successfully": "تم حذف العنوان بنجاح",
-  "please_provide_all_required_information": "يرجى تقديم جميع المعلومات المطلوبة"
+  "please_provide_all_required_information": "يرجى تقديم جميع المعلومات المطلوبة",
+  "enter_password": "أدخِل كلمة المرور"
 }
