--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -336,7 +336,7 @@
   "confirm_password": "confirm password",
   "confirm_password_is_required": "confirm password is required",
   "save": "save",
-  "the_password_you_entered_is_incorrect.": "the password you entered is incorrect.",
+  "the_password_you_entered_is_incorrect": "the password you entered is incorrect.",
   "building_no_is_required": "building number is required.",
   "office_no_is_required": "office number is required.",
   "city_is_required": "city is required",
