--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -328,5 +328,10 @@
   "enter_password": "أدخِل كلمة المرور",
   "confirm_password_doesnt_match_new_password": "تأكيد كلمة المرور لا تتطابق مع كلمة المرور الجديدة",
   "password_changed_successfully": "تم تغيير كلمة المرور بنجاح",
-  "edit": "تعديل"
+  "edit": "تعديل",
+  "nothing_to_eat_here": "لا شيء يؤكل هنا !",
+  "we_are _sorry_that_we_can't_find_the_page_please_go_back_or_try_again": "نعتذر أننا لم نستطع أن نجد الصفحة، من فضلك قم بالعودة أو حاول مرة أخرى",
+  "try_again": "حاول مرة أخرى",
+  "ooops_no_internet_connection": "خطأ ! لا يوجد اتصال بالانترنت",
+  "check_your_internet_connection_and_try_again": "افحص الانترنت وحاول مرة أخرى"
 }
