--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -354,5 +354,12 @@
   "we_are _sorry_that_we_can't_find_the_page_please_go_back_or_try_again": "we are sorry that we can't find the page , please go back or try again.",
   "try_again": "try again",
   "ooops_no_internet_connection": "ooops ! no internet connection",
-  "check_your_internet_connection_and_try_again": "check your internet connection and try again"
+  "check_your_internet_connection_and_try_again": "check your internet connection and try again",
+  "saturday": "saturday",
+  "sunday": "sunday",
+  "monday": "monday",
+  "tuesday": "tuesday",
+  "wednesday": "wednesday",
+  "thursday": "thursday",
+  "friday": "friday"
 }
