fix footer and vendor

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -9,7 +9,7 @@
   "my_orders": "الطلبات",
   "wishlist": "المفضلة",
   "my_addresses": "العناوين",
-  "rights_reserved": "© جميع الحقوق محفوظة لماكدونالدز 2023",
+  "rights_reserved": "جميع الحقوق محفوظة ل",
   "sign_in": "تسجيل الدخول",
   "to_orderfast_now": "لتسريع الطلب الآن",
   "Welcome_back": "مرحبا بعودتك",
