--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,7 @@
   "my_orders": "my orders",
   "wishlist": "wishlist",
   "my_addresses": "my addresses",
-  "rights_reserved": "All Rights Reserved To Mcdonald's 2023 ©",
+  "rights_reserved": "All Rights Reserved To",
   "sign_in": "sign in",
   "to_orderfast_now": "to Order fast Now",
   "Welcome_back": "Welcome back",
