--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -340,5 +340,7 @@
   "tuesday": "الثلاثاء",
   "wednesday": "الأربعاء",
   "thursday": "الخميس",
-  "friday": "الجمعة"
+  "friday": "الجمعة",
+  "check_your_internet_connection_and_try_again": "افحص الانترنت وحاول مرة أخرى",
+  "your_order_has_been_scheduled_successfully": "تم الطلب بنجاح"
 }
