--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -342,6 +342,6 @@
   "wednesday": "الأربعاء",
   "thursday": "الخميس",
   "friday": "الجمعة",
-  "check_your_internet_connection_and_try_again": "افحص الانترنت وحاول مرة أخرى",
-  "your_order_has_been_scheduled_successfully": "تم الطلب بنجاح"
+  "the_date_must_be_a_date_after_yesterday":".يجب ان يكون التاريخ بعد تاريخ اليوم",
+  "the_time_must_be_a_date_after_or_equal_to_15:15:39":"يجب ان يكون الوقت يساوي او بعد :15:39"
 }
