--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -342,6 +342,5 @@
   "wednesday": "الأربعاء",
   "thursday": "الخميس",
   "friday": "الجمعة",
-  "check_your_internet_connection_and_try_again": "افحص الانترنت وحاول مرة أخرى",
-  "your_order_has_been_scheduled_successfully": "تم الطلب بنجاح"
+  "sign_in_register_to_add_favourite": "قم بتسجيل الدخول لتتمكن من الإضافة إلى المفضلة"
 }
