--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -363,6 +363,5 @@
   "wednesday": "wednesday",
   "thursday": "thursday",
   "friday": "friday",
-  "check_your_internet_connection_and_try_again": "check your internet connection and try again",
-  "your_order_has_been_scheduled_successfully": "your order has been scheduled successfully"
+  "sign_in_register_to_add_favourite": "sign in/ register to add favourite"
 }
