--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -343,7 +343,7 @@
   "thursday": "الخميس",
   "friday": "الجمعة",
   "the_date_must_be_a_date_after_yesterday":".يجب ان يكون التاريخ بعد تاريخ اليوم",
-  "the_time_must_be_a_date_after_or_equal_to_15:15:39":"يجب ان يكون الوقت يساوي او بعد :15:39",
+  "time_must_be_equal_or_after_time_now":"يجب ان يكون الوقت المحدد صحيح",
   "sign_in_register_to_add_favourite": "قم بتسجيل الدخول لتتمكن من الإضافة إلى المفضلة",
   "cancel": "إلغاء",
   "sorry_some_product_not_available_in_this_area" : "بعض المنتجات غير متوفرة في المنطقة المختارة.",
