--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -74,7 +74,7 @@
   "call_us": "اتصل بنا",
   "message_us": "راسلنا",
   "leave_a_feedback": "اترك رأيك",
-  "your_name_optional": "اسمك (اختياري)",
+  "your_name": "اسمك",
   "phone_number_optional": "رقم هاتف (اختياري)",
   "your_feedback": "رأيك",
   "categories": "الفئات",
@@ -269,7 +269,7 @@
     "max": "الحقل يجب أن يكون أقل من   {{max}}",
     "matches": "ادخل رقم هاتف صحيح"
   },
-  "Phone_number_must_be_between_8_and_15_number": "رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
+  "phone_number_must_be_between_8_and_15_number": "رقم الهاتف يجب الا يقل عن 8 ارقام و الا يزيد عن 15 رقما",
   "saved_in_wish_list": "تم الحفظ بنجاح في قائمتك المفضلة",
   "deleted_from_wishlist": "تم المسح بنجاح من قائمتك المفضلة",
   "no_address": "لم يتم حفظ عنوان حتى الآن",
