--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -79,7 +79,7 @@
   "email_optional": "email (optional)",
   "submit": "submit",
   "leave_a_feedback": "leave a feedback",
-  "your_name_optional": "your name (optional)",
+  "your_name": "your name",
   "phone_number_optional": "phone number (optional)",
   "your_feedback": "your feedback",
   "your_cart_is_empty": "your cart is empty",
@@ -294,7 +294,7 @@
     "max": "must be at less than  {{max}}",
     "matches": "enter a valid format"
   },
-  "Phone_number_must_be_between_8_and_15_number": "Phone number must be between 8 and 15 digits",
+  "phone_number_must_be_between_8_and_15_number": "Phone number must be between 8 and 15 digits",
   "saved_in_wish_list": "saved successfully in your wishlist",
   "deleted_from_wishlist": "removed successfully from your wishlist",
   "no_address": "no address saved yet",
