--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,6 +1,6 @@
 {
   "powered_by_queue": "بدعم من كيو",
-  "return_policy": "سياسة الاسترجاع",
+  "return_policy": "سياسة العائدات",
   "shipping_policy": "سياسة الشحن",
   "privacy_policy": "سياسة الخصوصية",
   "more": "المزيد",
@@ -347,5 +347,12 @@
   "cancel": "إلغاء",
   "sign_in_register_to_add_favourite": "قم بتسجيل الدخول لتتمكن من الإضافة إلى المفضلة",
   "sorry_some_product_not_available_in_this_area": "بعض المنتجات غير متوفرة في المنطقة المختارة.",
-  "sorry_some_products_not_available_in_this_area": "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع"
+  "sorry_some_products_not_available_in_this_area": "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
+  "order_receipt": "فاتورة الطلب",
+  "date_time": "التاريخ والوقت",
+  "order_type": "نوع الطلب",
+  "order_summary": "ملخص الطلب",
+  "need_help_call_us": "تحتاج مساعدة ؟ اتصل بنا",
+  "knet": "كي نت",
+  "visa": "فيزا"
 }
