success - failure notes

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -354,5 +354,6 @@
   "order_summary": "ملخص الطلب",
   "need_help_call_us": "تحتاج مساعدة ؟ اتصل بنا",
   "knet": "كي نت",
-  "visa": "فيزا"
+  "visa": "فيزا",
+  "back_to_store": "العودة إلى المتجر"
 }
