--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -370,5 +370,6 @@
   "sorry_some_product_not_available_in_this_area": "sorry some product not available in this area",
   "sorry_some_products_not_available_in_this_area": "sorry ! some product not available in this area.",
   "knet": "knet",
-  "visa": "visa"
+  "visa": "visa",
+  "back_to_store": "back to store"
 }
