done with address for auth only  - note that i commentd some navigation router because scenario is not so clear

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -347,5 +347,6 @@
   "cancel": "إلغاء",
   "sign_in_register_to_add_favourite": "قم بتسجيل الدخول لتتمكن من الإضافة إلى المفضلة",
   "sorry_some_product_not_available_in_this_area": "بعض المنتجات غير متوفرة في المنطقة المختارة.",
-  "sorry_some_products_not_available_in_this_area": "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع"
+  "sorry_some_products_not_available_in_this_area": "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
+  "add_new_address" : "اضافة عنوان جديد"
 }
