--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -355,5 +355,6 @@
   "need_help_call_us": "تحتاج مساعدة ؟ اتصل بنا",
   "knet": "كي نت",
   "visa": "فيزا",
-  "back_to_store": "العودة إلى المتجر"
+  "back_to_store": "العودة إلى المتجر",
+  "we_advise_that_saving_the_receipt": "ننصح بحفظ الإيصال"
 }
