--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -371,5 +371,6 @@
   "sorry_some_products_not_available_in_this_area": "sorry ! some product not available in this area.",
   "knet": "knet",
   "visa": "visa",
-  "back_to_store": "back to store"
+  "back_to_store": "back to store",
+  "we_advise_that_saving_the_receipt": "we advise that saving the receipt"
 }
