--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -358,5 +358,6 @@
   "visa": "فيزا",
   "back_to_store": "العودة إلى المتجر",
   "we_advise_that_saving_the_receipt": "ننصح بحفظ الإيصال",
-  "add_new_address": "اضافة عنوان جديد"
+  "add_new_address": "اضافة عنوان جديد",
+  "select_area_to_mach_your_selected_address":"اختر المنطقه التي تتوافق مع العنوان المحدد"
 }
