--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -361,5 +361,6 @@
   "add_new_address": "اضافة عنوان جديد",
   "select_area_to_mach_your_selected_address":"اختر المنطقه التي تتوافق مع العنوان المحدد",
   "some_out_of_stock_item":"متاح فقط {{amount}}  من هذا المنتج",
-  "invalid_otp" : "رقم التحقق غير صحيح"
+  "invalid_otp" : "رقم التحقق غير صحيح",
+  "the_date_must_be_a_date_after_yesterday.":"اختر تاريخًا بعد تاريخ امس"
 }
