--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -205,7 +205,7 @@
   "this_area": "this area",
   "select_address": "select address",
   "search_for_cities_and_areas": "search for cities and areas",
-  "quantity_of_out_of_stock": "quantity of out of stock",
+  "quantity_of_out_of_stock": "quantity out of stock",
   "promo_code_is_invalid": "promo code is invalid",
   "promo_code_validation": "promo code activated and applied on your cart.",
   "contact_us": "contact us",
@@ -253,7 +253,7 @@
   "address_details": "address details",
   "add_a_minimum_of": "add a minimum of",
   "to_place_your_order": "to place your order",
-  "out_stock": "out stock",
+  "out_stock": "out of stock",
   "must_select_min_and_max": "must choose min {{min}} qty or {{max}} qty.",
   "field_must_select_at_least_one": "you must select at least one choice.",
   "confirm": "confirm",
